--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "opendbc"]
   path = opendbc_repo
   url = https://github.com/eduardogarufi/opendbc.git
+  branch = vw-meb
 [submodule "msgq"]
   path = msgq_repo
   url = ../../commaai/msgq.git
